--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "browser-sync start --files '*.html' --files 'css/*.css' --files 'js/bundle.js' --server",
     "watch": "npm run watch-css & npm run watch-js",
     "build": "npm run build-css & npm run build-js",
-    "watch-css": "stylus -w styl/style.styl -o css",
-    "build-css": "stylus styl/style.styl -o css && postcss autoprefixer --autoprefixer.browsers 'last 2 versions' -u cssnano -d css css/style.css",
+    "watch-css": "stylus -w styl/[!_]*.styl -o css",
+    "build-css": "stylus styl/[!_]*.styl -o css && postcss -u autoprefixer --autoprefixer.browsers 'last 2 versions' -u cssnano -d css css/*",
     "watch-js": "watchify js/main.js -o js/bundle.js -v",
     "build-js": "browserify js/main.js | uglifyjs -cm > js/bundle.js"
   },
@@ -27,7 +27,7 @@
     "lodash.debounce": "^4.0.0",
     "lodash.random": "^3.1.0",
     "lodash.times": "^4.0.0",
-    "sanitize.css": "^3.0.0"
+    "sanitize.css": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
@@ -37,7 +37,7 @@
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "cssnano": "^3.4.0",
-    "postcss-cli": "^2.4.0",
+    "postcss-cli": "^2.5.1",
     "stylus": "^0.53.0",
     "uglify-js": "^2.6.1",
     "watchify": "^3.7.0"
