--- a/package.json
+++ b/package.json
@@ -23,24 +23,24 @@
   },
   "homepage": "http://yhey.me/",
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "lodash.debounce": "^4.0.0",
-    "lodash.random": "^3.1.0",
-    "lodash.times": "^4.0.0",
-    "sanitize.css": "^3.1.1"
+    "babel-polyfill": "6.3.14",
+    "lodash.debounce": "4.0.1",
+    "lodash.random": "3.1.1",
+    "lodash.times": "4.0.1",
+    "sanitize.css": "3.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.11.1",
-    "browserify": "^13.0.0",
-    "cssnano": "^3.4.0",
-    "postcss-cli": "^2.5.1",
-    "stylus": "^0.53.0",
-    "uglify-js": "^2.6.1",
-    "watchify": "^3.7.0"
+    "autoprefixer": "6.3.1",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-stage-0": "6.3.13",
+    "babelify": "7.2.0",
+    "browser-sync": "2.11.1",
+    "browserify": "13.0.0",
+    "cssnano": "3.4.0",
+    "postcss-cli": "2.5.1",
+    "stylus": "0.53.0",
+    "uglify-js": "2.6.1",
+    "watchify": "3.7.0"
   },
   "browserify": {
     "transform": [
