--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "npm run watch-css & npm run watch-js",
     "build": "npm run build-css & npm run build-js",
     "watch-css": "stylus -w styl/[!_]*.styl -o css",
-    "build-css": "stylus styl/[!_]*.styl -o css && postcss -u autoprefixer --autoprefixer.browsers 'last 2 versions' -u cssnano -d css css/*",
+    "build-css": "stylus styl/[!_]*.styl -o css && postcss -c config.json -d css css/*.css",
     "watch-js": "watchify js/main.js -o js/bundle.js -v",
     "build-js": "browserify js/main.js | uglifyjs -cm > js/bundle.js"
   },
