--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "serve": "browser-sync start --files 'dist' --server dist",
     "clean": "del 'dist' && git clone -b gh-pages https://github.com/yuheiy/yhey.me.git dist && del 'dist/**' '!dist' '!dist/.git'",
     "copy": "ncp static dist",
-    "build:html": "jade src/jade/[!_]*.jade --out dist",
-    "build:css": "node-sass src/scss -o dist/css --output-style compressed",
-    "build:js": "mkdirp dist/js && browserify src/js/main.js | uglifyjs --compress --mangle > dist/js/main.js",
+    "jade": "jade src/jade/[!_]*.jade -o dist",
+    "sass": "node-sass src/scss -o dist/css",
+    "build:html": "npm run jade",
+    "build:css": "npm run sass -- --output-style compressed",
+    "build:js": "mkdirp dist/js && browserify src/js/main.js | uglifyjs -c -m > dist/js/main.js",
     "build": "npm-run-all clean --parallel copy build:*",
-    "watch:html": "npm run build:html -- --watch",
-    "watch:css": "node-sass src/scss -o dist/css --watch",
-    "watch:js": "mkdirp dist/js && watchify src/js/main.js -o dist/js/main.js -v",
+    "watch:html": "npm run jade -- --watch",
+    "watch:css": "npm run sass -- --watch",
+    "watch:js": "mkdirp dist/js && watchify src/js/main.js -o dist/js/main.js -d -v",
     "watch": "npm-run-all clean --parallel serve copy watch:*",
     "deploy": "cd dist/ && git push origin gh-pages",
     "predeploy": "npm run build && cd dist/ && git add --all && git commit -m 'Build'"
