modify directory config

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "browser-sync start --files 'dist' --server dist",
     "clean": "del 'dist' && git clone -b gh-pages https://github.com/yuheiy/yhey.me.git dist && del 'dist/**' '!dist' '!dist/.git'",
-    "copy": "ncp static dist",
+    "copy": "ncp src/public dist",
     "jade": "jade src/jade/[!_]*.jade -o dist",
     "sass": "node-sass src/scss -o dist/css",
     "build:html": "npm run jade",
