--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "watch:html": "npm run jade -- --watch",
     "watch:css": "npm run sass -- --watch",
     "watch:js": "mkdirp dist/js && watchify src/js/main.js -o dist/js/main.js -d -v",
-    "watch": "npm-run-all clean --parallel serve copy watch:*",
+    "watch": "npm-run-all --parallel serve copy watch:*",
     "deploy": "cd dist/ && git push origin gh-pages",
     "predeploy": "npm run build && cd dist/ && git add --all && git commit -m 'Build'"
   },
