modify npm script

--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "scripts": {
     "serve": "browser-sync start --files 'dist' --server dist",
     "clean": "del 'dist' && git clone -b gh-pages https://github.com/yuheiy/yhey.me.git dist && del 'dist/**' '!dist' '!dist/.git'",
-    "copy": "ncp src/public dist",
+    "static": "ncp src/static dist",
     "jade": "jade src/[!_]*.jade -o dist",
     "sass": "node-sass src/scss -o dist/css",
     "build:html": "npm run jade",
     "build:css": "npm run sass -- --output-style compressed",
     "build:js": "mkdirp dist/js && browserify src/js/main.js | uglifyjs -c -m > dist/js/main.js",
-    "build": "npm-run-all clean --parallel copy build:*",
+    "build": "npm-run-all clean --parallel static build:*",
     "watch:html": "npm run jade -- --watch",
     "watch:css": "npm run sass -- --watch",
     "watch:js": "mkdirp dist/js && watchify src/js/main.js -o dist/js/main.js -d -v",
-    "watch": "npm-run-all --parallel serve copy watch:*",
+    "watch": "npm-run-all --parallel serve static watch:*",
     "deploy": "cd dist/ && git push origin gh-pages",
     "predeploy": "npm run build && cd dist/ && git add --all && git commit -m 'Build'",
     "postinstall": "npm run clean"
